@@ -25,6 +25,8 @@ bzr-svn	1.0.3					  UNRELEASED
   * Cope with new ordering argument to Repository.iter_inventories(). 
     (Jelmer Vernooij, #532363)
 
+  * Fix use of svn:author=author. (Jelmer Vernooij, #527805)
+
  FEATURES
 
   * Support fetching a limited number of revisions. (Michael Hudson)
